--- a/contato.html
+++ b/contato.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
     <link rel="stylesheet" href="CSS/style_contato.css">
-    <link rel="stylesheet" href="CSS/style_navbar.css">
+    <link rel="stylesheet" href="CSS/teste_navbar.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -21,13 +21,13 @@
 <body>
    
     <header>
-        <nav class="navbar navbar-expand-md fixed">
+        <nav class="navbar navbar-expand-lg fixed">
           <div class="container-fluid">
             <div>
-              <img src="Image/Logo Passatempo.png" class="home_logo ">
+              <img src="Image/Logo Passatempo.png" class="passatempo_logo ">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon "></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
             <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
               <div class="offcanvas-header">
@@ -35,31 +35,32 @@
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>  
               <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-around flex-grow-1">
+                <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
                   <li class="nav-item text-top ">
-                    <a class="nav-link " aria-current="page" href="menu-2.html">Home</a>
+                    <a class="nav-link navegacao_link" aria-current="page" href="menu-2.html">Home</a>
                   </li>
-                  <li class="nav-item ">
-                    <a class="nav-link" href="oficinas-2.html">Oficinas</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="oficinas-2.html">Oficinas</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="eventos.html">Eventos Sociais</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="eventos.html">Eventos Sociais</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="eventos.html">Eventos Corporativos</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="eventos.html">Eventos Corporativos</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="saudeBemEstar.html">Saude e Bem-Estar</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="saudeBemEstar.html">Saude e Bem-Estar</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contato.html">Contato</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="contato.html">Contato</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="adm.html">Admin</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="adm.html">Admin</a>
                   </li>
                 </ul>
-              </div>
             </div>
+            
+  
           </div>
         </nav>
       </header>
