--- a/oficinas-2.html
+++ b/oficinas-2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oficinas</title>
     <link rel="stylesheet" href="CSS/teste_oficina.css">
-    <link rel="stylesheet" href="CSS/style_navbar.css">
+    <link rel="stylesheet" href="CSS/teste_navbar.css">
     <link rel="stylesheet" href="CSS/style_footer.css">
 
 
@@ -25,13 +25,13 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md fixed ">
+        <nav class="navbar navbar-expand-lg fixed">
           <div class="container-fluid">
             <div>
-              <img src="Image/Logo Passatempo.png" class="home_logo ">
+              <img src="Image/Logo Passatempo.png" class="passatempo_logo ">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon "></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
             <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
               <div class="offcanvas-header">
@@ -39,31 +39,32 @@
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>  
               <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-around flex-grow-1">
+                <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
                   <li class="nav-item text-top ">
-                    <a class="nav-link " aria-current="page" href="menu-2.html">Home</a>
+                    <a class="nav-link navegacao_link" aria-current="page" href="menu-2.html">Home</a>
                   </li>
-                  <li class="nav-item ">
-                    <a class="nav-link" href="oficinas-2.html">Oficinas</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="oficinas-2.html">Oficinas</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="eventos.html">Eventos Sociais</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="eventos.html">Eventos Sociais</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="eventos.html">Eventos Corporativos</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="eventos.html">Eventos Corporativos</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="saudeBemEstar.html">Saude e Bem-Estar</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="saudeBemEstar.html">Saude e Bem-Estar</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contato.html">Contato</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="contato.html">Contato</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="adm.html">Admin</a>
+                  <li class="nav-item navegaçao_item">
+                    <a class="nav-link  navegacao_link" href="adm.html">Admin</a>
                   </li>
                 </ul>
-              </div>
             </div>
+            
+  
           </div>
         </nav>
       </header>
@@ -89,7 +90,10 @@
     <div class="container-fluid">
         <div class="row  justify-content-start">
             <div class="col-12 text-center">
-                <img src="Image/Logo Passatempo.png" alt="logo" class="img-fluid" style="max-height: 100px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="black" class="bi bi-tools" viewBox="0 0 16 16">
+                    <path d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3q0-.405-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708M3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z"/>
+                  </svg>
+                <!-- <img src="Image/Logo Passatempo.png" alt="logo" class="img-fluid" style="max-height: 100px;"> -->
             </div>
             <div class="col-12 align-self-center text-center mt-4">
                 <h1 class="titulo_cabecalho">Oficinas</h1>
