--- a/saudeBemEstar.html
+++ b/saudeBemEstar.html
@@ -2,167 +2,245 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saúde e Bem estar</title>
-    <link rel="stylesheet" href="CSS/style_navbar.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/style_bem_estar.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Saúde e Bem estar</title>
+  <link rel="stylesheet" href="CSS/style_navbar.css">
+  <link rel="stylesheet" href="CSS/style_bem_estar.css">
+  <link rel="stylesheet" href="CSS/style_texto_voz.css">
 
-    <!-- fonte guy -->
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
 
-    <!-- fonte ubuntu -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-        rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <!-- fonte guy -->
+  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome para os ícones do texto por voz -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    integrity="sha384-o0eywV9zL0zQ+O9T84vKQ7RMLvO1Rj1Djt+PTnWpVePsUEas10uYATg+nROviyd4" crossorigin="anonymous">
+
+  <!-- fonte ubuntu -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet">
+
 </head>
 
 <body>
 
 
-    <header>
-        <nav class="navbar navbar-expand-md fixed-top ">
-          <div class="container-fluid  ">
-            <div>
-              <img src="Image/Logo Passatempo.png" class="home_logo ">
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon "></span>
-            </button>
-            <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-              <div class="offcanvas-header">
-                <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-              </div>  
-              <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-around flex-grow-1">
-                  <li class="nav-item text-top ">
-                    <a class="nav-link " aria-current="page" href="menu-2.html">Home</a>
-                  </li>
-                  <li class="nav-item ">
-                    <a class="nav-link" href="oficinas-2.html">Oficinas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="eventos.html">Eventos Sociais</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="eventos.html">Eventos Corporativos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="saudeBemEstar.html">Saude e Bem-Estar</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contato.html">Contato</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="adm.html">Admin</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+  <header>
+    <nav class="navbar navbar-expand-md fixed-top ">
+      <div class="container-fluid  ">
+        <div>
+          <img src="Image/Logo Passatempo.png" class="home_logo ">
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon "></span>
+        </button>
+        <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+            <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
-        </nav>
-      </header>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <!-- conteudo da página -->
-    <br>
-    <div class="container-fluid p-0" id="principal">
-
-        <div class="col-xlg-12 border border-danger">
-            <div class="row col-xlg-12 d-flex justify-content-between p-5">
-                <div class="col-md-4 p-0" id="saude_col">
-                    <div class="saude" id="texto0">Saúde e bem estar</div>
-                </div>
-                <div class="col-md-2 p-0" id="imagem0">
-                    <img src="Image/passatempoLogo.PNG" alt="">
-                </div>
-            </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-around flex-grow-1">
+              <li class="nav-item text-top ">
+                <a class="nav-link " aria-current="page" href="menu-2.html">Home</a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="oficinas-2.html">Oficinas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="eventos.html">Eventos Sociais</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="eventos.html">Eventos Corporativos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="saudeBemEstar.html">Saude e Bem-Estar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contato.html">Contato</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="adm.html">Admin</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="row col-xlg-12 d-flex p-5" id="container_amarelo">
-            <div class="col-xlg-12 d-flex justify-content-between">
-                <div class="col-md-4">
-                    <h1 id="texto1">
-                        Clínica Esportiva
-                        <p id="texto2">
+      </div>
+    </nav>
+  </header>
 
-                            Nossas Clínicas Esportivas são projetadas para introduzir crianças ao
-                            mundo dos esportes de maneira divertida, segura e educativa.<br>
-                            <br>
+  <div class="button-container">
+    <button class="btn iniciar" id="toggleReading">
+      <i class="fas fa-microphone"></i>
+    </button>
+  </div>
 
-                            Com foco no desenvolvimento físico, social e emocional, oferecemos uma ampla gama de
-                            modalidades esportivas que estimulam o espírito de equipe, a disciplina, e o gosto pela
-                            atividade física desde cedo.<br>
-                            <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
-                            As atividades são conduzidas por profissionais qualificados e utilizam métodos lúdicos para
-                            ensinar os fundamentos de diferentes esportes.
-                            Futebol, Basquete, Vôlei, Ginástica, Circo, Capoeira, Handebol, Takkyu Volley, Esgrima,
-                            Pilates, Funcional Kids e muito mais.<br>
-                            <br>
+  <!-- conteudo da página -->
+  <br>
+  <div class="container-fluid p-0" id="principal">
 
-                        </p>
-                    </h1>
-                </div>
-                <div class="col-md-5">
-                    <img src="Image/coloque_imagem.PNG" alt="" id="imagem1"><br>
-                    <img src="Image/purpurina_laranja.png" alt="" id="imagem2">
-                    <img src="Image/coloque_imagem.PNG" alt="" id="imagem3">
-                    <img src="Image/purpurina_azul.png" alt="" id="imagem4">
-                </div>
-            </div>
+    <div class="col-xlg-12 border border-danger">
+      <div class="row col-xlg-12 d-flex justify-content-between p-5">
+        <div class="col-md-4 p-0" id="saude_col">
+          <div class="saude" id="texto0">Saúde e bem estar</div>
         </div>
-
-        <br>
-        <br> <!-- pula linha-->
-        <br>
-        <br>
-
-        <div class="row col-xlg-12 d-flex p-5" id="container_amarelo">
-            <div class="col-xlg-12 d-flex justify-content-between align-items-center">
-                <div class="col-md-4 border border danger">
-                    <h1 id="texto3">
-                        Estação Fitness
-                        <p id="texto4">
-                            A Estação Fitness é um espaço completo para todas as idades, dedicado ao
-                            exercício físico e ao bem-estar.<br>
-                            <br>
-                            Aqui, oferecemos uma variedade de atividades para quem busca melhorar a saúde, a condição
-                            física e o bem-estar geral. Nossas sessões incluem treinos personalizados, aulas em grupo e
-                            programas de condicionamento físico que atendem às necessidades de iniciantes a atletas
-                            avançados.<br>
-                            <br>
-                            Yoga, Pilates, Zumba, Funcional, Crossfit e muito mais.<br>
-                            <br>
-                        </p>
-                    </h1>
-                </div>
-                <div class="col-md-5">
-                    <img src="Image/coloque_imagem.PNG" alt="" id="imagem5"><br>
-                    <img src="Image/purpurina_laranja.png" alt="" id="imagem6">
-                    <img src="Image/coloque_imagem.PNG" alt="" id="imagem7">
-                    <img src="Image/purpurina_azul.png" alt="" id="imagem8">
-                </div>
-            </div>
+        <div class="col-md-2 p-0" id="imagem0">
+          <img src="Image/passatempoLogo.PNG" alt="">
         </div>
+      </div>
+    </div>
+    <div class="row col-xlg-12 d-flex p-5" id="container_amarelo">
+      <div class="col-xlg-12 d-flex justify-content-between">
+        <div class="col-md-4">
+          <h1 id="texto1">
+            Clínica Esportiva
+            <p id="texto2">
 
-        <br>
-        <br>
-        <br>
-        <br>
-        
+              Nossas Clínicas Esportivas são projetadas para introduzir crianças ao
+              mundo dos esportes de maneira divertida, segura e educativa.<br>
+              <br>
+
+              Com foco no desenvolvimento físico, social e emocional, oferecemos uma ampla gama de
+              modalidades esportivas que estimulam o espírito de equipe, a disciplina, e o gosto pela
+              atividade física desde cedo.<br>
+              <br>
+
+              As atividades são conduzidas por profissionais qualificados e utilizam métodos lúdicos para
+              ensinar os fundamentos de diferentes esportes.
+              Futebol, Basquete, Vôlei, Ginástica, Circo, Capoeira, Handebol, Takkyu Volley, Esgrima,
+              Pilates, Funcional Kids e muito mais.<br>
+              <br>
+
+            </p>
+          </h1>
+        </div>
+        <div class="col-md-5">
+          <img src="Image/coloque_imagem.PNG" alt="" id="imagem1"><br>
+          <img src="Image/purpurina_laranja.png" alt="" id="imagem2">
+          <img src="Image/coloque_imagem.PNG" alt="" id="imagem3">
+          <img src="Image/purpurina_azul.png" alt="" id="imagem4">
+        </div>
+      </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <br>
+    <br> <!-- pula linha-->
+    <br>
+    <br>
 
-    <body>
+    <div class="row col-xlg-12 d-flex p-5" id="container_amarelo">
+      <div class="col-xlg-12 d-flex justify-content-between align-items-center">
+        <div class="col-md-4 border border danger">
+          <h1 id="texto3">
+            Estação Fitness
+            <p id="texto4">
+              A Estação Fitness é um espaço completo para todas as idades, dedicado ao
+              exercício físico e ao bem-estar.<br>
+              <br>
+              Aqui, oferecemos uma variedade de atividades para quem busca melhorar a saúde, a condição
+              física e o bem-estar geral. Nossas sessões incluem treinos personalizados, aulas em grupo e
+              programas de condicionamento físico que atendem às necessidades de iniciantes a atletas
+              avançados.<br>
+              <br>
+              Yoga, Pilates, Zumba, Funcional, Crossfit e muito mais.<br>
+              <br>
+            </p>
+          </h1>
+        </div>
+        <div class="col-md-5">
+          <img src="Image/coloque_imagem.PNG" alt="" id="imagem5"><br>
+          <img src="Image/purpurina_laranja.png" alt="" id="imagem6">
+          <img src="Image/coloque_imagem.PNG" alt="" id="imagem7">
+          <img src="Image/purpurina_azul.png" alt="" id="imagem8">
+        </div>
+      </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
+  </div>
+
+  <script>
+    let speech; // Variável para armazenar o objeto de fala
+    let isReading = false; // Variável para controlar o estado de leitura
+    let isMouseReadingEnabled = false; // Variável para controlar se a leitura com o mouse está habilitada
+  
+    // Função para iniciar a leitura do texto
+    function startReading(text) {
+      if (isMouseReadingEnabled && !isReading) {
+        speech = new SpeechSynthesisUtterance(text); // Cria o objeto para síntese de fala
+        speech.lang = "pt-BR"; // Define a língua para português do Brasil
+  
+        // Escutador de evento para quando a fala terminar
+        speech.onend = function () {
+          isReading = false; // Resetando o estado para leitura não ativa após terminar
+        };
+  
+        window.speechSynthesis.speak(speech); // Reproduz a fala
+        isReading = true; // Marca que a leitura está em andamento
+      }
+    }
+  
+    // Função para parar a leitura
+    function stopReading() {
+      window.speechSynthesis.cancel(); // Para a fala em andamento
+      isReading = false; // Garantir que o estado de leitura é falso
+    }
+  
+    // Selecionar todos os elementos com texto, incluindo navbar, links e botões
+    const textElements = document.querySelectorAll('p, h1, h2, h3, h4, h5, h6, a, button, .texto_descricao'); 
+  
+    textElements.forEach(element => {
+      element.addEventListener('mouseover', function () {
+        startReading(this.innerText); // Lê o texto do elemento quando o mouse passar sobre ele
+      });
+  
+      element.addEventListener('mouseout', function () {
+        stopReading(); // Para a leitura quando o mouse sair do elemento
+      });
+    });
+  
+    // Adicionar evento ao botão para parar a leitura quando clicado
+    const toggleButton = document.getElementById('toggleReading'); // Seleciona o botão
+    toggleButton.addEventListener('click', function () {
+      if (isReading) {
+        stopReading(); // Para qualquer leitura em andamento
+      }
+      isMouseReadingEnabled = !isMouseReadingEnabled; // Alterna entre habilitar ou desabilitar a leitura com o mouse
+  
+      // Mudar o ícone do botão, dependendo do estado
+      const icon = this.querySelector('i');
+      if (isMouseReadingEnabled) {
+        icon.classList.replace('fa-microphone-slash', 'fa-microphone'); // Ícone de microfone
+      } else {
+        icon.classList.replace('fa-microphone', 'fa-microphone-slash'); // Ícone de microfone com risco
+      }
+    });
+  </script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+  <body>
 
 </html>
